--- a/style.css
+++ b/style.css
@@ -68,3 +68,47 @@ nav ul li a:hover {
   border-bottom: 2px solid greenyellow;
   box-shadow: 5px 10px 30px rgba(0, 255, 128, 0.4);
 }
+
+/* Top of page */
+#header {
+  width: 100%;
+  height: 110vh;
+  background-repeat: no-repeat;
+  position: relative;
+  background-size: cover;
+}
+.header-heading {
+  width: 500px;
+  position: absolute;
+  left: 18%;
+  top: 50%;
+  transform: translate(-18%, -50%);
+  color: white;
+}
+.header-heading h1 {
+  font-size: 44px;
+  letter-spacing: 3px;
+  margin: 0px;
+}
+.header-heading h1 span {
+  color: greenyellow;
+}
+.header-heading p {
+  color: white;
+}
+.header-btn {
+  width: 120px;
+  height: 40px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: aquamarine;
+  box-shadow: 5px 10px 30px rgba(0, 255, 128, 0.4);
+  border-radius: 10px;
+  color: black;
+  margin-top: 25px;
+  transition: 0.6s ease-in-out;
+}
+.header-btn:hover {
+  background-color: chartreuse;
+}
