--- a/style.css
+++ b/style.css
@@ -146,3 +146,53 @@ nav ul li a:hover {
   width: 500px;
   color: white;
 }
+
+/* courses */
+#courses {
+  width: 100%;
+  height: 120vh;
+  display: flex;
+  box-sizing: border-box;
+  align-items: center;
+  justify-content: center;
+  padding-top: 40px;
+  flex-direction: column;
+  padding: 40px 0px;
+}
+.courses-container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.courses-box {
+  background-color: white;
+  width: 370px;
+  height: 490px;
+  margin: 20px;
+  border-radius: 10px;
+  overflow: hidden;
+  box-shadow: 4px 10px 12px rgba(0, 255, 128, 0.4);
+  position: relative;
+}
+.courses-text {
+  width: 100%;
+  height: 35%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+}
+.courses-text p {
+  text-align: center;
+}
+.courses-heading {
+  text-align: center;
+  columns: white;
+  margin: 20px 0px;
+}
+.courses-heading h1 {
+  font-size: 2.5rem;
+}
+.courses-heading p {
+  color: white;
+}
