--- a/style.css
+++ b/style.css
@@ -196,3 +196,17 @@ nav ul li a:hover {
 .courses-heading p {
   color: white;
 }
+
+/* Projects */
+#projects {
+  width: 100%;
+  height: 120vh;
+  display: flex;
+  box-sizing: border-box;
+  align-items: center;
+  justify-content: center;
+  padding-top: 40px;
+  flex-direction: column;
+  padding: 40px 0px;
+  background-color: darkslategray;
+}
