--- a/style.css
+++ b/style.css
@@ -210,3 +210,40 @@ nav ul li a:hover {
   padding: 40px 0px;
   background-color: darkslategray;
 }
+
+/* Contact */
+#contact {
+  width: 100%;
+  height: 110vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  padding: 40px 0px;
+}
+#contact form {
+  width: 600px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+}
+#contact form input,
+#contact form textarea {
+  width: 100%;
+  height: 50px;
+  margin: 5px 0px;
+  padding: 10px;
+  background-color: white;
+  color: black;
+  border-radius: 5px;
+}
+#contact form textarea {
+  height: 150px;
+}
+#contact form input[type="submit"] {
+  height: 45px;
+  background-color: chartreuse;
+  color: black;
+  text-transform: uppercase;
+}
