--- a/style.css
+++ b/style.css
@@ -70,14 +70,14 @@ nav ul li a:hover {
 }
 
 /* Top of page */
-#header {
+#home {
   width: 100%;
   height: 110vh;
   background-repeat: no-repeat;
   position: relative;
   background-size: cover;
 }
-.header-heading {
+.home-heading {
   width: 500px;
   position: absolute;
   left: 18%;
@@ -85,18 +85,18 @@ nav ul li a:hover {
   transform: translate(-18%, -50%);
   color: white;
 }
-.header-heading h1 {
+.home-heading h1 {
   font-size: 44px;
   letter-spacing: 3px;
   margin: 0px;
 }
-.header-heading h1 span {
+.home-heading h1 span {
   color: greenyellow;
 }
-.header-heading p {
+.home-heading p {
   color: white;
 }
-.header-btn {
+.home-btn {
   width: 120px;
   height: 40px;
   display: flex;
@@ -109,7 +109,7 @@ nav ul li a:hover {
   margin-top: 25px;
   transition: 0.6s ease-in-out;
 }
-.header-btn:hover {
+.home-btn:hover {
   background-color: chartreuse;
 }
 
