--- a/style.css
+++ b/style.css
@@ -72,21 +72,31 @@ nav ul li a:hover {
 /* Top of page */
 #header {
   width: 100%;
-  height: 110vh;
-  background-repeat: no-repeat;
+  height: 100vh;
   position: relative;
-  background-size: cover;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  align-items: center;
+}
+#header img {
+  height: 55%;
+  width: auto;
+  position: relative;
+  border-radius: 50%;
+  margin-left: -20%;
 }
 .header-heading {
   width: 500px;
-  position: absolute;
-  left: 18%;
-  top: 50%;
-  transform: translate(-18%, -50%);
+  position: relative;
   color: white;
 }
+.header-heading h2 {
+  font-size: 2rem;
+  margin-bottom: 10px;
+}
 .header-heading h1 {
-  font-size: 44px;
+  font-size: 3rem;
   letter-spacing: 3px;
   margin: 0px;
 }
@@ -116,14 +126,19 @@ nav ul li a:hover {
 /* About */
 #about {
   width: 100%;
-  height: 110vh;
+  height: 100vh;
   background-color: darkslategrey;
   display: flex;
   box-sizing: border-box;
   align-items: center;
-  justify-content: space-between;
+  justify-content: space-around;
   padding: 50px 5% 0px 5%;
   position: relative;
+}
+#about img {
+  width: 40%;
+  height: auto;
+  margin-right: -20%;
 }
 .about-text {
   display: flex;
@@ -150,14 +165,23 @@ nav ul li a:hover {
 /* courses */
 #courses {
   width: 100%;
-  height: 120vh;
+  height: 100vh;
   display: flex;
-  box-sizing: border-box;
   align-items: center;
-  justify-content: center;
-  padding-top: 40px;
   flex-direction: column;
-  padding: 40px 0px;
+}
+.courses-heading {
+  text-align: center;
+  color: white;
+}
+.courses-heading h1 {
+  font-size: 2.5rem;
+  margin-top: 100px;
+}
+.courses-heading p {
+  color: white;
+  margin-bottom: 50px;
+  margin-top: -20px;
 }
 .courses-container {
   display: flex;
@@ -167,59 +191,50 @@ nav ul li a:hover {
 .courses-box {
   background-color: white;
   width: 370px;
-  height: 490px;
+  height: 100%;
   margin: 20px;
   border-radius: 10px;
   overflow: hidden;
   box-shadow: 4px 10px 12px rgba(0, 255, 128, 0.4);
   position: relative;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 10px 80px;
+}
+.courses-box img {
+  height: 40%;
+  width: 100%;
 }
 .courses-text {
   width: 100%;
   height: 35%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-direction: column;
+  text-align: center;
+  margin-top: 10%;
+  margin-bottom: -40px;
 }
 .courses-text p {
   text-align: center;
-}
-.courses-heading {
-  text-align: center;
-  columns: white;
-  margin: 20px 0px;
-}
-.courses-heading h1 {
-  font-size: 2.5rem;
-}
-.courses-heading p {
-  color: white;
 }
 
 /* Projects */
 #projects {
   width: 100%;
-  height: 120vh;
+  height: 100vh;
   display: flex;
-  box-sizing: border-box;
   align-items: center;
-  justify-content: center;
-  padding-top: 40px;
   flex-direction: column;
-  padding: 40px 0px;
   background-color: darkslategray;
 }
 
 /* Contact */
 #contact {
   width: 100%;
-  height: 110vh;
+  height: 90vh;
   display: flex;
   align-items: center;
   justify-content: center;
   flex-direction: column;
-  padding: 40px 0px;
 }
 #contact form {
   width: 600px;
@@ -246,4 +261,24 @@ nav ul li a:hover {
   background-color: chartreuse;
   color: black;
   text-transform: uppercase;
+}
+
+/* Footer */
+#footer {
+  width: 100%;
+  height: auto;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  background-color: darkslategray;
+  padding: 10px 0;
+}
+.footer-icons {
+  display: flex;
+  flex-direction: row;
+}
+.footer-icons a img {
+  height: 50px;
+  width: auto;
 }
