--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@ body {
   box-sizing: border-box;
   background-color: dimgray;
   font-family: "Courier New", Courier, monospace;
+  min-width: 530px;
 }
 
 ul {
@@ -60,7 +61,7 @@ nav ul li a {
   transition: 0.6s ease;
 }
 
-nav ul li:not(.active) a:hover {
+nav ul li:not(.active) a:hover a:active {
   border-bottom: 2px solid greenyellow;
   box-shadow: 5px 10px 30px rgba(0, 255, 128, 0.4);
 }
