--- a/style.css
+++ b/style.css
@@ -105,12 +105,13 @@ nav ul li:not(.active) a:hover a:active {
   .item-gallery {
     display: flex;
     align-items: center;
-    justify-content: space-around;
+    width: 100%;
+    height: 80%;
   }
   .item-box {
     background-color: white;
     width: 80%;
-    height: 700px;
+    height: 650px;
     margin: 0 20px;
     border-radius: 10px;
     overflow: hidden;
@@ -119,18 +120,26 @@ nav ul li:not(.active) a:hover a:active {
     display: flex;
     flex-direction: column;
     align-items: center;
-  }
-  .item-box img {
-    height: 40%;
-    width: 100%;
+    padding-bottom: 20px;
+    margin-bottom: 60px;
   }
   .item-text {
     width: 100%;
     height: 35%;
     text-align: center;
   }
+  .item-text h3 {
+    margin-top: 40px;
+  }
   .item-text p {
     text-align: center;
+    margin: 0 10%;
+  }
+  .item-list {
+    text-align: left;
+    list-style: circle;
+    margin-left: 10%;
+    margin-right: 10%;
   }
 
   /* Top of page */
@@ -220,11 +229,12 @@ nav ul li:not(.active) a:hover a:active {
     display: flex;
     align-items: center;
     flex-direction: column;
+    padding-bottom: 20px;
   }
   #courses .item-gallery .item-box img {
-    width: auto;
-    height: 40%;
-    margin: 10px 20px;
+    width: 300px;
+    height: 220px;
+    margin: 20px;
   }
 
   /* Projects */
@@ -235,6 +245,11 @@ nav ul li:not(.active) a:hover a:active {
     align-items: center;
     flex-direction: column;
     background-color: darkslategray;
+    padding-bottom: 5%;
+  }
+  #projects .item-gallery .item-box img {
+    width: 100%;
+    height: 40%;
   }
 
   /* Contact */
